# ios-linuxkit

./: Makefile  README.md  README_arm64.md  debug.h  meson.build  meson_options.txt  misc.h
.github/workflows/: build-unsigned-ipa.yml  ci.yml
app/: AboutAppearanceViewController.m  AboutViewController.m  App.xcconfig  AppARM64.xcconfig  AppDelegate.m  DelayedUITask.m  FontPickerViewController.m  GuestARM64.xcconfig  Info.plist  Logging.h  Logging.m  ModernFileProviderManager.h  ModernFileProviderManager.m  Project.xcconfig  Roots.m  Terminal.m  TerminalView.m  TerminalViewController.m  Theme.m  UserPreferences.m  XtermRenderer.xcconfig  gen_apk_repositories.py
app/Base.lproj/: About.storyboard
app/terminal/: ghostty-web-VENDORED.txt  ghostty-web.js  term.css  term.js  xterm-term-bridge.js  xterm-term.html
app/terminal/xterm-vendor/: VENDORED.txt
asbestos/: asbestos.c  helpers.c  offsets.c
asbestos/guest-arm64/: gen.c
asbestos/guest-arm64/gadgets-aarch64/: control.S  entry.S  gadgets.h  memory.S
benchmark/: create_fakefs.py
benchmark/assets/: shellbench.sh
docs/: ARM64_BACKEND.md  ARM64_BACKEND_ZH.md  ARM64_GADGET_FUSION_PLAN.md  ARM64_PRODUCTION_BASELINE.md  ARM64_PRODUCTION_DEPLOYMENT.md  ARM64_SMOKE_ISSUES_AND_SYSCALL_COVERAGE.md  ARM64_WORKLOAD_SMOKE_TESTS.md  BENCHMARKSGAME_GO_SMOKE.md  LINUX_BUILD_AND_HOST_ABI.md  ORIGINAL_ISH_README.md  README.md  RUNTIME_VALIDATION.md
docs/benchmark/: BENCHMARK_COMPAT.md  BENCHMARK_PERF.md  README.md
emu/: cpu.h  mmu.h
emu/arch/arm64/: cpu.h  decode.h
fs/: real.c  sock.c  sock.h  stat.c  stat.h
fs/proc/: root.c
iSH.xcodeproj/: project.pbxproj
kernel/: calls.c  calls.h  elf.h  exec.c  exit.c  fork.c  fs.c  memory.c  memory.h  mmap.c  signal.c  signal.h  uname.c  vdso.c
kernel/arch/arm64/: calls.c
tests/arm64/: ai-cli-runtime-coverage.sh  cli-corner-smoke.sh  hot-trace-record-smoke.sh  internal-continue-fixtures.sh  runtime-coverage.sh
tests/e2e/: e2e.bash
vdso/x86/: meson.build
