option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])

option('guest_arch', type: 'combo', choices: ['arm64'], value: 'arm64',
       description: 'Guest architecture to emulate')

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)
